# ai-service-desk

./: .dockerignore  .env  .env.test  .gitignore  README.md  dockerFile  locust.py  profile_summary.txt  profile_testing.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 271af0a9fd36_added_description_column_for_bedrock_to_.py  435be600d120_add_assignee_email.py  611f26b1f02a_new_initial_db.py  8ef0bace69ea_create_tickets_table.py  995afac0466e_added_update_column.py
app/: main.py
app/api/: ai.py  ticket_routes.py
app/core/: config.py  database.py  deps.py  exceptions.py
app/middleware/: response_time.py
app/models/: ticket_model.py
app/repositories/: ticket_repo.py
app/schemas/: ticket_schema.py
app/service/: ticket_service.py  validation_service.py
app/service/aws/: bedrock_service.py  prompt_template.py  prompts.yaml
test/: conftest.py
test/end_to_end_test/: test_ticket_workflow.py
test/integration_test/: test_ai_routes.py  test_create_ticket.py  test_delete_ticket.py  test_get_all_tickets.py  test_get_ticket.py  test_update_ticket.py
test/unit_test/: test_create_ticket.py  test_delete_ticket.py  test_get_all_tickets.py  test_get_ticket.py  test_update_ticket.py
